implemented token generation using jwt
